Overflowing content still fixing

--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,6 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    min-height: 100vh;
-}
-
 img {
     height: 100%;
     width: 100%;
@@ -111,9 +107,9 @@ p {
     padding: 0 10px;
 }
 
-#header .nav-bar .brand {
+/* #header .nav-bar .brand {
     margin-left: 50px;
-}
+} */
 
 #header .nav-list ul {
     display: flex;
@@ -320,6 +316,11 @@ p {
     padding: 100px 0;
 }
 
+#services .services-top {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
 #services .services-top p {
     max-width: 500px;
     margin: 0 auto;
@@ -341,7 +342,7 @@ p {
     flex-direction: column;
     padding: 30px;
     border-radius: 10px;
-    background-image: url(img/service.jpg);
+    background-image: url(#);
     background-size: cover;
     margin: 10px 5%;
     position: relative;
@@ -560,6 +561,7 @@ p {
 
 #contact .icon {
     width: 70px;
+    height: 70px;
     margin: 0 auto;
     margin-bottom: 10px;
 }
@@ -744,38 +746,38 @@ p {
         width: 100%;
         display: flex;
         flex-direction: row;
-        padding: 10px;
+        justify-content: space-evenly;
         margin: 0;
     }
 
     #contact .contact-item {
-        margin: 10px;
+        width: 30%;
+        margin: 0;
         flex-direction: row;
-        padding: 20px 5px;
     }
 
     #contact .contact-item .icon {
-        height: 50px;
-        width: 50px;
+        height: 100px;
+        width: 100px;
     }
 
     #contact .contact-item .icon img {
-        margin-left: 15px;
+        object-fit: contain;
     }
 
     #contact .contact-item .contact-info {
         width: 100%;
         text-align: left;
-        padding-left: 25px;
+        padding-left: 20px;
     }
 
     #contact .contact-item .contact-info h2 {
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: 500;
     }
 
     #contact .contact-item .contact-info p {
-        font-size: 1rem;
+        font-size: .7rem;
         font-weight: 500;
     }
 }
